# yourcraft

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.rc  imgui.ini
resources/shaders/: block_outline.frag  block_outline.vert  chunk.frag  chunk.vert  composite.frag  composite.vert  crosshair.frag  crosshair.vert  flora.frag  flora.vert  grayscale.frag  grayscale.vert  opaque.frag  skybox.frag  skybox.vert  transparent.frag  transparent.vert
src/: application.cpp  application.h  camera.cpp  camera.h  main.cpp  persistence.cpp  persistence.h  player.cpp  player.h  resource.cpp  resource.h  thread_pool.h
src/gl/: common.cpp  common.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/graphic/: block_outline.cpp  block_outline.h  block_vertex.cpp  block_vertex.h  crosshair.cpp  crosshair.h  display.cpp  display.h  flora_vertex.cpp  flora_vertex.h  skybox.cpp  skybox.h
src/gui/: game_scene.cpp  game_scene.h  gui.cpp  gui.h  pause_scene.cpp  pause_scene.h
src/util/: aabb.h  file.h  math.h
src/world/: block.cpp  block.h  chunk.cpp  chunk.h  world.cpp  world.h  world_generator.cpp  world_generator.h
